# tools.mlff

./: LICENSE  README.md  setup.cfg
mlfftools/: train.py
mlfftools/scripts/: eos_fit_data.py  eos_get_data_from_predictions.py  sokrates_compute.py  sokrates_create_model_gallery.py  sokrates_data_info.py  sokrates_evaluate.py  sokrates_plot_predictions.py  sokrates_plot_predictions_npz.py  sokrates_predictions2tdep.py  sokrates_train.py  vibes_create_trajectory.py  vibes_prepare_eos.py  vibes_split_trajectory.py
