[metadata]
name = mlfftools
version = 0.0.2b
author = "Florian Knoop"
url = "https://github.com/flokno/tools.mlff"
description = "Python tools for working with the MLFF package."
license = "ISC License"
classifiers =
    License :: OSI Approved :: ISC License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8,<3.11
install_requires =
	ase >= 3.21
	typer >= 0.4
	matplotlib >= 3.0
	xarray >= 0.18
	numpy >= 1.11
	scipy >= 1.5
	h5py >= 3.5
	rich >= 1.0
	pandas >= 1.0, < 2
	h5netcdf >= 1.0

[options.entry_points]
console_scripts =
	eos_fit_data = mlfftools.scripts.eos_fit_data:app
	eos_get_data = mlfftools.scripts.eos_get_data:app
	# eos_get_data_from_predictions = mlfftools.scripts.eos_get_data_from_predictions:app
	sokrates_compute = mlfftools.scripts.sokrates_compute:app
	sokrates_create_model_gallery = mlfftools.scripts.sokrates_create_model_gallery:app
	sokrates_data_info = mlfftools.scripts.sokrates_data_info:app
	sokrates_evaluate = mlfftools.scripts.sokrates_evaluate:app
	sokrates_train = mlfftools.scripts.sokrates_train:app
	sokrates_plot_predictions = mlfftools.scripts.sokrates_plot_predictions:app
	sokrates_plot_predictions_npz = mlfftools.scripts.sokrates_plot_predictions_npz:app
	sokrates_predictions2tdep = mlfftools.scripts.sokrates_predictions2tdep:app
	vibes_create_trajectory = mlfftools.scripts.vibes_create_trajectory:app
	vibes_prepare_eos = mlfftools.scripts.vibes_prepare_eos:app
	vibes_trajectory2mlff = mlfftools.scripts.vibes_trajectory2mlff:app
